name:                google-oauth2-for-cli
version:             0.1.0.0
synopsis:            Get Google OAuth2 token for CLI tools
description:         Please see README.md
homepage:            https://github.com/ishiy1993/google-oauth2-for-cli#readme
license:             BSD3
license-file:        LICENSE
author:              ishiy
maintainer:          y.ishihara.1993@gmail.com
copyright:           Copyright: (c) 2016 ishiy
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.Google.OAuth2
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
  ghc-options:         -Wall

source-repository head
  type:     git
  location: https://github.com/ishiy1993/google-oauth2-for-cli
